--- a/package.json
+++ b/package.json
@@ -3,24 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/react-fontawesome": "^0.1.15",
     "@fortawesome/fontawesome-free": "^5.8.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-regular-svg-icons": "^5.8.1",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "bootstrap": "^3.3.7",
     "jquery": "^3.3.1",
     "jspdf": "1.5.3",
     "jspdf-autotable": "3.0.5",
+    "node-sass": "^6.0.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "1.1.4",
     "survey-analytics": "latest",
     "survey-creator": "latest",
-    "survey-pdf": "latest",
-    "survey-creator-react": "^1.8.64-beta.1",
+    "survey-creator-react": "latest",
     "survey-knockout": "^1.8.64",
+    "survey-pdf": "latest",
     "survey-react": "latest",
     "surveyjs-widgets": "latest",
     "uuid": "^8.3.2",
