--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "1.1.4",
     "survey-analytics": "latest",
-    "survey-creator": "latest",
-    "survey-creator-react": "latest",
-    "survey-knockout": "^1.8.64",
+    "survey-core": "1.8.66",
+    "survey-creator-react": "1.8.66-beta.1",
+    "survey-react-ui": "1.8.66",
     "survey-pdf": "latest",
     "survey-react": "latest",
     "surveyjs-widgets": "latest",
